--- a/css/style.css
+++ b/css/style.css
@@ -171,10 +171,9 @@ body {
 }
 
 .why__inner {
-    position: relative;
     background-color: #2C343E;
     border-radius: 10px;
-    min-height: 577px;
+    height: 577px;
 }
 
 .why__title {
@@ -197,32 +196,33 @@ body {
     opacity: .8;
     text-align: center;
     max-width: 540px;
-    margin: 0 auto 86px;
+    margin: 0 auto;
 }
 
 .why__content {
-    width: 1110px;
+    max-width: 1110px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    position: absolute;
-    left: 85px;
 }
 
 .why__content__box {
+    transform: translateY(105px);
     width: 350px;
     height: 382px;
     text-align: center;
     color: #FEFCF7;
     background: #0E8784;
     border-radius: 8px;
-    text-align: center;
 }
 
 .why__content__box-img {
     padding-top: 72px;
     margin-bottom: 56px;
+    height: 120px;
+    width: 72px;
 }
+
 
 .why__content__box-title {
     font-family: 'fraunces';
@@ -238,7 +238,7 @@ body {
     font-size: 16px;
     line-height: 26px;
     max-width: 255px;
-    margin: 0 auto;
+    margin: 0 auto 48px;
 }
 
 .works {
@@ -702,15 +702,12 @@ body {
     display: none;
 }
 
-@media only screen and (max-width: 1245px) {
-    .why__content {
-        left: 40px;
-    }
-}
 
-@media only screen and (max-width: 1200px) {
-    .why__content {
-        left: 30px;
+
+@media only screen and (max-width: 1110px) {
+    .why__content__box {
+        width: 330px;
+        height: 370px;
     }
 }
 
@@ -739,6 +736,10 @@ body {
 
     .location {
         margin-bottom: 138px;
+    }
+
+    .why__content__box {
+        width: 300px;
     }
 }
 
@@ -776,6 +777,12 @@ body {
     .greate-plan__inner-subtitle {
         font-size: 28px;
         line-height: 32px;
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    .why__content__box {
+        width: 270px;
     }
 }
 
@@ -841,6 +848,12 @@ body {
 
     .greate-plan__inner-content--box {
         padding: 5px;
+    }
+}
+
+@media only screen and (max-width: 855px) {
+    .why__content__box {
+        width: 240px;
     }
 }
 
@@ -989,6 +1002,39 @@ body {
         margin-bottom: 30px;
         max-width: 200px;
     }
+
+    .why__content {
+        flex-direction: column;
+    }
+
+    .why__content__box {
+        width: 90%;
+        height: 180px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0 auto 20px;
+        transform: translateY(65px);
+    }
+
+    .why__content__box-img {
+        margin-bottom: 0;
+        padding-top: 0;
+    }
+
+    .why__content__bigbox-text {
+        text-align: left;
+    }
+
+    .why__content__box-title {
+        margin-bottom: 15px;
+    }
+
+    .why__content__box-text {
+        margin: 0 auto;
+        max-width: 344px;
+    }
+
 }
 
 @media only screen and (max-width: 720px) {
@@ -1001,13 +1047,16 @@ body {
         flex-direction: column;
         align-items: center;
     }
+
     .greate-plan__inner {
         padding: 60px 0;
     }
+
     .greate-plan__inner-content--box {
         width: 100%;
         text-align: center;
     }
+
     .greate-plan__inner-subtitle {
         max-width: 100%;
     }
@@ -1080,6 +1129,11 @@ body {
     .our-commitment__inner-text {
         font-size: 15px;
         line-height: 22px;
+    }
+
+    .why__content__box-img {
+        height: 60px px;
+        width: 60px;
     }
 }
 
@@ -1175,6 +1229,27 @@ body {
 
     .about__text {
         max-width: 100%;
+    }
+    .why__content__box {
+        width: 280px;
+        height: 380px;
+        display: block ;
+        padding-top: 40px;
+    }
+    .why__content__bigbox-text {
+        text-align: center;
+    }
+    .why {
+        margin-bottom: 700px;
+    }
+    .why__inner {
+        height: 900px;
+    }
+    .why__content__box-text {
+        max-width: 212px;
+    }
+    .why__content__box-title {
+        margin-bottom: 24px;
     }
 }
 
@@ -1296,6 +1371,14 @@ body {
 
     .header__content-about {
         background-size: 300% 100%;
+    }
+    .why__content__box {
+        width: 260px;
+        height: 320px;
+        padding-top: 20px;
+    }
+    .why {
+        margin-bottom: 610px;
     }
 }
 
